# xskill

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  README_zh-CN.md  index.html  install.sh  skills.json  xskill.schema.json
.github/scripts/: collect_skills.py
.github/workflows/: build-mdbook.yml  publish-npm-prerelease.yml  publish-npm.yml  publish-packages.yml  release-linux-prerelease.yml  release.yml  sync-skills.yml
book/en/: book.toml
book/zh/: book.toml
crates/generate-book/: Cargo.toml
docs/: SPEC.md  guide.md  guide_zh-CN.md
install/: index.html
man/en/: --agent-validation.html  --from-parameter-resolution.html  --skill-parameter.html  1-configure-a-source.html  2-query-available-skills.html  3-install-a-skill.html  4-list-installed-skills.html  404.html  5-remove-a-skill.html  add-—-install-a-skill.html  building.html  cache-—-manage-skills-cache.html  cache.html  commands.html  config-file-location.html  config-—-manage-configuration.html  configuration-structure.html  configuration.html  development.html  editor-integration.html  entry-fields.html  fallback-mechanism.html  features.html  find-—-interactively-find-and-install-a-skill.html  find-—-interactively-find-and-install-skills.html  format.html  from-cratesio.html  from-git.html  from-npm.html  from-source.html  full-example.html  global-vs-local-paths.html  index.html  installation-model:-canonical-directory-+-symlinks.html  installation.html  introduction.html  json-schemas.html  license.html  link-—-symlink-existing-skills-to-a-platform.html  list-—-list-installed-skills.html  (+30 more)
man/zh/: --agent-验证规则.html  --from-参数解析.html  --skill-参数.html  1-配置源.html  2-查询可用技能.html  3-安装技能.html  4-列出已安装技能.html  404.html  5-移除技能.html  add-—-安装技能.html  cache-—-管理技能缓存.html  config-—-管理配置.html  find-—-交互式查找并安装技能.html  index.html  json-schema.html  link-—-软链接已有技能到平台.html  list-—-列出已安装技能.html  new-—-创建技能项目.html  platforms-—-列出配置平台.html  print.html  query-—-查询源中的技能.html  rec-—-管理推荐技能.html  registryschemajson-—-注册中心索引.html  remove-—-移除技能.html  searchindex.js  (+45 more)
schemas/: registry.schema.json
site/: install.ps1
src/: cache.rs  config.rs  git.rs  lock.rs  main.rs  output.rs  skill_meta.rs  skill_resolver.rs  utils.rs
(+204 files in other folders)
