[package]
name = "xskill"
version = "0.1.0"
edition = "2024"
description = "A skills management tool for discovering, installing, and managing reusable agent skill packs."
license = "Apache-2.0"

[workspace]
members = [".", "crates/*"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
dirs = "6"
skim = "5.2.0"
fuzzy-matcher = "0.3"
crossterm = "0.29"
md-5 = "0.10"
colored = "2"
ratatui = "0.30"
pathdiff = "0.2"

[package.metadata.deb]
maintainer = "Jetsung Chan <i@jetsung.com>"
assets = [
    ["target/release/xskill", "usr/bin/xskill", "755"],
]

[package.metadata.generate-rpm]
maintainer = "Jetsung Chan <i@jetsung.com>"
assets = [
    { source = "target/release/xskill", dest = "/usr/bin/xskill", mode = "755" }
]
